logs/spiffwikimarkup.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SpiffWikiMarkup'...
Listing './lib/python3.5/site-packages/SpiffWikiMarkup/Plex'...
Compiling './lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Lexicons.py'...
***   File "./lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Lexicons.py", line 114
    if type(specifications) <> types.ListType:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Machines.py'...
***   File "./lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Machines.py", line 185
    elif code1 <> maxint:
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Regexps.py'...
***   File "./lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Regexps.py", line 155
    if type(value) <> type(''):
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Scanners.py'...
***   File "./lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Scanners.py", line 125
    print "Scanner: read: Performing", action, "%d:%d" % (
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Traditional.py'...
***   File "./lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Traditional.py", line 98
    while not self.end and self.c <> ']':
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Transitions.py'...
***   File "./lib/python3.5/site-packages/SpiffWikiMarkup/Plex/Transitions.py", line 192
    print self
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/SpiffWikiMarkup/Plex/test_tm.py'...
***   File "./lib/python3.5/site-packages/SpiffWikiMarkup/Plex/test_tm.py", line 7
    print m
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/SpiffWikiMarkup-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
